<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/fragmentLabel_home"
        tools:ignore="UnusedAttribute"
        />

    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/ic_search_nav"
        android:enabled="true"
        android:title="@string/fragmentLabel_search"
        tools:ignore="UnusedAttribute" />

    <item
        android:id="@+id/orderFragment"
        android:icon="@drawable/ic_orders"
        android:title="@string/fragmentLabel_orders"
        tools:ignore="UnusedAttribute" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_profile"
        android:title="@string/fragmentLabel_profile"
        tools:ignore="UnusedAttribute"
        />

</menu>