<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/gray"
    android:orientation="vertical"
    tools:context=".ui.fragments.home.HomeFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/home_expandable_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="0dp"
        app:cardElevation="7dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="20dp"
            android:paddingVertical="17dp">

            <ImageView
                android:id="@+id/home_logo_location"
                android:layout_width="20dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_location"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_location_title"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@id/home_logo_location"
                app:layout_constraintEnd_toStartOf="@+id/imageView"
                app:layout_constraintStart_toEndOf="@id/home_logo_location"
                app:layout_constraintTop_toTopOf="@id/home_logo_location" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="5dp"
                android:paddingVertical="10dp"
                android:src="@drawable/ic_line_down"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/home_btn_delivery"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="26dp"
        android:inputType="textAutoComplete"
        android:text="@string/delivery"
        app:cornerRadius="25dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/green"
        app:layout_constraintEnd_toStartOf="@id/home_btn_pickup"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_expandable_location"
        app:strokeColor="@color/gray"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/home_btn_pickup"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:inputType="textAutoComplete"
        android:text="@string/pickup"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/green"
        app:cornerRadius="25dp"
        app:layout_constraintEnd_toStartOf="@id/home_btn_catering"
        app:layout_constraintStart_toEndOf="@id/home_btn_delivery"
        app:layout_constraintTop_toBottomOf="@id/home_expandable_location"
        app:strokeColor="@color/gray" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/home_btn_catering"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:inputType="textAutoComplete"
        android:text="@string/catering"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/green"
        app:cornerRadius="25dp"
        app:layout_constraintEnd_toStartOf="@id/home_btn_curbside"
        app:layout_constraintStart_toEndOf="@id/home_btn_pickup"
        app:layout_constraintTop_toBottomOf="@id/home_expandable_location"
        app:strokeColor="@color/gray" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/home_btn_curbside"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="12dp"
        android:inputType="textAutoComplete"
        android:text="@string/curbside"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/green"
        app:cornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/home_btn_catering"
        app:layout_constraintTop_toBottomOf="@id/home_expandable_location"
        app:strokeColor="@color/gray" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/home_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
android:layout_marginHorizontal="12dp"
        android:backgroundTint="@color/white"
        app:cardElevation="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_btn_curbside">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="19dp"
            android:layout_marginVertical="14dp">

            <ImageView
                android:id="@+id/home_search_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.6"
                android:src="@drawable/ic_search"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:autofillHints=""
                android:background="@null"
                android:hint="@string/find_store_by_name"
                android:padding="5dp"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/home_search_icon"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TextFields" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_settings"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_search">

        <ScrollView
            android:id="@+id/scroll"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:scrollbars="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/home_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/home_search"
                    tools:ignore="NotSibling"
                    tools:listitem="@layout/item_category" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/cafe_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="22dp"
                    android:layout_marginTop="40dp"
                    android:fontFamily="@font/product_sans_regular"
                    android:text="@string/_58"
                    android:textColor="@color/light_black"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/home_recycler" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:fontFamily="@font/product_sans_regular"
                    android:text="@string/stores_open"
                    android:textColor="@color/light_black"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="@id/cafe_count"
                    app:layout_constraintStart_toEndOf="@id/cafe_count"
                    app:layout_constraintTop_toTopOf="@id/cafe_count" />


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/home_cafe_rec"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="vertical"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:layout_constraintTop_toBottomOf="@id/cafe_count"
                    tools:listitem="@layout/item_cafe" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>